banking-k8s/banking-mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: banking-mtls
  namespace: banking
spec:
  mtls:
    mode: STRICT
