banking-k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: account-service
  namespace: banking

spec:
  replicas: 2

  selector:
    matchLabels:
      app: account-service

  template:

    metadata:
      labels:
        app: account-service

    spec:

      containers:
        - name: account-service

          image: snehalshinde11/account-service:2.0

          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: account-storage
              mountPath: /data

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20

      volumes:

        - name: account-storage

          persistentVolumeClaim:
            claimName: account-pvc
