banking-k8s/fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: logging
spec:
  selector:
    matchLabels:
      app: fluentd

  template:
    metadata:
      labels:
        app: fluentd

    spec:
      serviceAccountName: fluentd

      # Run Fluentd on every node, including tainted nodes.
      tolerations:
        - operator: Exists

      containers:
        - name: fluentd
          image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch8-1.0

          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 300m
              memory: 400Mi

          volumeMounts:
            - name: varlog
              mountPath: /var/log

            - name: fluentd-config
              mountPath: /fluentd/etc/fluent.conf
              subPath: fluent.conf

      volumes:
        - name: varlog
          hostPath:
            path: /var/log

        - name: fluentd-config
          configMap:
            name: fluentd-config
