banking-k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service
  namespace: banking

spec:
  replicas: 2

  selector:
    matchLabels:
      app: notification-service

  template:

    metadata:
      labels:
        app: notification-service

    spec:

      nodeSelector:
        kubernetes.io/hostname: k8s-worker02

      tolerations:

        - key: notification
          operator: Equal
          value: "true"
          effect: NoSchedule

      containers:

        - name: notification-service

          image: snehalshinde11/notification-service:2.1

          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
