banking-k8s/transaction-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: transaction-v1
  namespace: banking

spec:
  replicas: 1

  selector:
    matchLabels:
      app: transaction-service
      version: v1

  template:

    metadata:
      labels:
        app: transaction-service
        version: v1

    spec:

      containers:

        - name: transaction-service

          image: snehalshinde11/transaction-service:2.0

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20

          resources:

            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
