banking-k8s/account-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: account-service
  namespace: banking

spec:
  type: NodePort

  selector:
    app: account-service

  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30080
