banking-k8s/notification-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification-service
  namespace: banking

spec:
  type: LoadBalancer

  selector:
    app: notification-service

  ports:
    - name: http
      port: 5000
      targetPort: 5000
