banking-k8s/transaction-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: transaction-service
  namespace: banking

spec:
  type: ClusterIP

  selector:
    app: transaction-service

  ports:
    - port: 8080
      targetPort: 8080
