banking-k8s/notification-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: notification-service
  namespace: banking

spec:
  host: notification-service

  subsets:

    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
