banking-k8s/notification-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: notification-service
  namespace: banking

spec:
  hosts:
    - notification-service

  http:

    - route:

        - destination:
            host: notification-service
            subset: v1
          weight: 90

        - destination:
            host: notification-service
            subset: v2
          weight: 10
