banking-k8s/transaction-circuit-breaker.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: transaction-service
  namespace: banking

spec:
  host: transaction-service

  trafficPolicy:

    connectionPool:

      tcp:
        maxConnections: 1

      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1

    outlierDetection:
      consecutive5xxErrors: 3
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 100

  subsets:

    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
