banking-k8s/transaction-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: transaction-service
  namespace: banking

spec:
  host: transaction-service

  subsets:

    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2
