banking-k8s/transaction-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: transaction-service
  namespace: banking

spec:
  hosts:
    - transaction-service

  http:
    - route:

        - destination:
            host: transaction-service
            subset: v1
          weight: 90

        - destination:
            host: transaction-service
            subset: v2
          weight: 10
